# traQ-bookmaker

./: .gitignore  Cargo.toml  README.md  Taskfile.yaml  post.mjs
_development/: .env.development  compose.yaml
adapter/: Cargo.toml
adapter/src/: lib.rs  modules.rs
adapter/src/model/: candidate.rs  match.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  user.rs
adapter/src/persistence/: mariadb.rs  mod.rs
adapter/src/repository/: bet.rs  candidate.rs  match.rs  mod.rs  user.rs
adapter/src/traq/: message.rs  mod.rs  stamp.rs
app/: Cargo.toml
app/src/model/: bet.rs  help.rs  match.rs  mod.rs  user.rs
app/src/model/message/: help.rs  match.rs  mod.rs
app/src/usecase/: bet.rs  help.rs  match.rs  mod.rs  user.rs
app/src/usecase/message/: help.rs  match.rs  mod.rs
driver/: Cargo.toml
driver/src/model/message/: message_created.rs  mod.rs  ping.rs
driver/src/module/: mod.rs
driver/src/routes/message/: mod.rs  ping.rs
driver/src/routes/message/message_created/: bet.rs  cancel.rs  close.rs  finish.rs  help.rs  info.rs  mod.rs  reg.rs  start.rs
driver/src/startup/: mod.rs
kernel/: Cargo.toml
kernel/src/: bet.rs  lib.rs
kernel/src/model/: bet.rs  candidate.rs  channel.rs  match.rs  message.rs  mod.rs  stamp.rs  statistic.rs  user.rs
kernel/src/repository/: bet.rs  candidate.rs  error.rs  match.rs  mod.rs  user.rs
kernel/src/traq/: error.rs  message.rs  mod.rs  stamp.rs
migration/src/: lib.rs  m20240412_101522_initial_create_table.rs
