[package]
name = "app"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kernel = { path = "../kernel" }
adapter = { path = "../adapter" }
derive-new = "0.6"
thiserror = "1.0.58"
anyhow = "1.0.82"
chrono = "0.4.37"
