[package]
name = "driver"
default-run = "bootstrap"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kernel = { path = "../kernel" }
app = { path = "../app" }
adapter = { path = "../adapter" }
anyhow = "1.0.82"
axum = { version = "0.7" }
tokio = { version = "1.37", features = ["full"] }
tower = "0.4"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
