[package]
name = "kernel"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.58"
anyhow = "1.0.82"
chrono = "0.4.37"
derive-new = "0.6"

[dependencies.uuid]
version = "1.8.0"
features = [
  "v4",       # Lets you generate random UUIDs
  "fast-rng", # Use a faster (but still sufficiently random) RNG
]

[dev-dependencies]
random-string = "1.1"
